chore: miscellaneous fixes - Add missing copyright notice - Clean up new lines - Add description/author/project url to uplugin

--- a/AngelscriptImGui.uplugin
+++ b/AngelscriptImGui.uplugin
@@ -3,10 +3,10 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "ImGui support for Angelscript",
-	"Description": "",
+	"Description": "Adds scripting support for UnrealImGui to Angelscript.",
 	"Category": "Scripting",
-	"CreatedBy": "",
-	"CreatedByURL": "",
+	"CreatedBy": "Envar Games AB",
+	"CreatedByURL": "https://github.com/EnvarStudio/AngelscriptImGui",
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"EnabledByDefault": false,
